Update homepage, change font

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,22 +1,24 @@
 @font-face{
-    font-family: 'Open Sans';
-    src: url(../Assets/OpenSans-Regular.ttf)
+    font-family: 'Muli';
+    src: url(../Assets/Muli.ttf)
 }
 
 @font-face{
-    font-family: 'Open Sans Medium';
-    src: url(../Assets/OpenSans-Medium.ttf);
+    font-family: 'Muli Semibold';
+    src: url(../Assets/Muli-SemiBold.ttf);
+    font-weight: bold;
 }
 
 @font-face{
-    font-family: 'Open Sans Bold';
-    src: url(../Assets/OpenSans-Bold.ttf);
+    font-family: 'Muli Bold';
+    src: url(../Assets/Muli-Bold.ttf);
+    font-weight: bolder;
 }
 
 *{ 
-    background-color: #183661;
+    background-color: white;
     margin: 0;
-    font-family: 'Open Sans', 'Open Sans Medium', 'Open Sans Bold';
+    font-family: 'Muli', 'Muli Semibold', 'Muli Bold';
 }
 
 .navbar{
